# Bangla-TTS-VibeVoice-0.5B

./: DATASET_FORMAT.md  KAGGLE_INSTRUCTIONS.md  KAGGLE_INSTRUCTIONS_V2.md  README_BANGLA.md  finetune_vibevoice_lora.py  pyproject.toml  train_vibevoice.py
vibevoice/data/: bangla_dataset.py
vibevoice/modular/: modeling_vibevoice_streaming.py  modeling_vibevoice_training.py
